<resources>
    <string name="app_name">Lunch Anyone</string>
    
    <!-- Strings related to login -->
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="prompt_group_name">Group Name</string>
    <string name="prompt_restaurant">Restaurant</string>
    <string name="prompt_description">Description</string>
    <string name="prompt_image_url">Image Url</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="thumbnail">thumbnail</string>
    <string name="group_view">Group View</string>
    <string name="chat_activity">Chat</string>
    <string name="edit_restaurant_hint">Suggest a restaurant for the group to go to</string>
    <string name="action_create_group">Create group</string>
    <string name="create_group">Create Group</string>

</resources>
